# iceberg

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  dagger.json  mkdocs.yml  pyproject.toml  zensical.toml
.claude/agents/: adr-writer.md  changelog-writer.md  code-writer.md  complexity-reducer.md  dead-code-detector.md  dependency-auditor.md  docstring-writer.md  mutation-analyzer.md  orchestrator.md  reviewer.md  test-writer.md  type-annotator.md
.claude/commands/: adr.md  audit.md  check.md  commit.md  new-agent.md  new-feature.md  qa.md
.claude/skills/new-agent/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: bump.yaml  ci.yaml  ci.yml  docs.yaml  pr-title.yaml  publish.yaml  tag-on-merge.yaml
ci/: pyproject.toml
ci/src/main/: __init__.py
docs/: index.md
docs/api/: api.md  ast_walker.md  cli.md  fixer.md  reporter.md
docs/decisions/: 0001-sheridan-namespace-package.md  0002-static-analysis-only.md  0003-all-authoritative-with-ast-fallback.md  0004-no-git-awareness.md  0005-taskfile-task-runner.md  0006-typer-cli.md  0007-python-3-14.md  0008-curated-agent-roster.md  0009-uv-lock-not-committed.md  0010-exclude-claude-worktrees-from-ruff.md  0011-thin-cli-shell.md  0012-all-above-imports.md  0013-init-reexport-inference.md  0014-exclude-test-modules.md  0015-ib-error-codes.md  0016-init-explicit-gatekeeper.md  0017-remove-mutmut.md  0018-dagger-ci-pipeline.md  0019-show-command-as-primary-api-reporting.md  0020-ib002-one-directional.md  0021-yaml-extension.md  0022-pr-title-conventional-commits.md  0023-checkout-token-for-pat-tag-push.md  0024-show-includes-signatures-and-class-members.md  0025-remove-check-fix-narrow-scope-to-api-reporting.md
docs/superpowers/specs/: 2026-03-28-type-info-for-all-members-design.md
src/sheridan/iceberg/: __init__.py  api.py  ast_walker.py  cli.py  enums.py  fixer.py  models.py  reporter.py
tests/: conftest.py  test_api.py  test_ast_walker.py  test_cli.py  test_fixer.py  test_init.py  test_reporter.py  test_show_functional.py
tests/examples/: README.md  standalone.py  todo.py
tests/examples/geometry/: README.md  __init__.py  point.py  shapes.py  utils.py
tests/examples/plugin/: README.md  __init__.py
tests/examples/plugin/core/: __init__.py
tests/examples/plugin/formats/: __init__.py  base.py  json_fmt.py
tests/examples/warehouse/: README.md  __init__.py  models.py  utils.py
tests/expected/show/: geometry_json.json  geometry_tree.txt  geometry_use_ast_json.json  geometry_use_ast_tree.txt  plugin_json.json  plugin_tree.txt  standalone_json.json  standalone_tree.txt  todo_json.json  todo_tree.txt  warehouse_json.json  warehouse_tree.txt
