[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "sheridan-iceberg"
version = "1.1.0"
description = "Enforces the presence and correctness of __all__ in Python modules"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "sheridan", email = "andrewasheridan@gmail.com" }]
keywords = ["static-analysis", "api", "all", "linting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Repository = "https://github.com/andrewasheridan/iceberg"
Issues = "https://github.com/andrewasheridan/iceberg/issues"
Changelog = "https://github.com/andrewasheridan/iceberg/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "bandit[toml]>=1.9.4",
    "zensical",
    "mkdocstrings[python]>=1.0.3",
]

[project.scripts]
iceberg = "sheridan.iceberg.cli:main"

[project.entry-points."pre-commit"]
iceberg = "sheridan.iceberg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sheridan"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 120
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["sheridan"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sheridan.iceberg --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/sheridan/iceberg"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

# ---------------------------------------------------------------------------
# commitizen
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"
